--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
-    "make": "electron-forge make"
+    "make": "electron-forge make",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder"
   },
   "build": {
     "appId": "com.chntif.todo",
     "productName": "todo",
+    "asar": false,
     "directories": {
       "output": "dist"
     },
@@ -18,14 +21,16 @@
       "cache": "C:\\Users\\Chen\\Desktop\\暂存\\electron-cache"
     },
     "files": [
-      "**/*",
-      "!node_modules/*/{CHANGELOG.md,README.md,README,readme.md,readme}",
-      "!**/tests"
+      "dist/**/*",
+      "out/**/*",
+      "node_modules/**/*",
+      "package.json",
+      ".gitignore",
+      "package-lock.json"
     ],
     "win": {
       "target": "nsis",
-      "icon": "./favicon.ico",
-      "createSymLinks": false
+      "icon": "./favicon.ico"
     },
     "nsis": {
       "oneClick": false,
@@ -46,7 +51,8 @@
     "@electron-forge/plugin-auto-unpack-natives": "^7.5.0",
     "@electron-forge/plugin-fuses": "^7.5.0",
     "@electron/fuses": "^1.8.0",
-    "electron": "^33.0.0"
+    "electron": "^33.0.0",
+    "electron-builder": "^25.1.8"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.1"
